# MibiMdEditor

./: README.md  TODO.md  index.py  io.github.mibi88.MibiMdEditor.gschema.xml  meson.build
data/: gresource.xml  io.github.mibi88.MibiMdEditor.appdata.xml.in  io.github.mibi88.MibiMdEditor.desktop.in  io.github.mibi88.MibiMdEditor.gschema.xml  meson.build  preferences.ui  preferencesswitch.ui  script_properties.ui  window.ui
data/icons/: meson.build
example_scripts/: bbcode.py  markdown.py  requirements.txt
firstv/: README.md  v1.py
po/: LINGUAS  MibiMdEditor.pot  POTFILES  POTFILES.in  de.mo  de.po  fr.mo  fr.po  meson.build  tr.po
src/: application.vala  generator.vala  generator_markdown.vala  main.vala  meson.build
src/ui/: labelswitch.vala  preferences.vala  preferencesswitch.vala  script_properties.vala  window.vala
